--- a/css/style.css
+++ b/css/style.css
@@ -786,13 +786,18 @@ body {
   border-color: var(--accent-color);
 }
 
+.input-wrap {
+  position: relative;
+}
+
 .input-icon {
   position: absolute;
-  left: 19px;
+  left: 16px;
   top: 50%;
 
   transform: translateY(-50%);
   fill: currentColor;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:hover + .input-icon,
@@ -800,6 +805,38 @@ body {
   fill: var(--accent-color);
 }
 
+.form-comment {
+  padding: 8px 16px;
+
+  width: 100%;
+  height: 120px;
+  background-color: transparent;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  resize: none;
+  outline: none;
+}
+
+.form-comment::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.agree-input {
+  position: relative;
+}
+
+.agree-icon {
+  position: absolute;
+}
+.agree-text {
+  color: #757575;
+}
+
+.agree-link {
+  color: var(--accent-color);
+}
 .form-button {
   display: block;
   margin: 0 auto;
